fix(login): properly align logo in the center

--- a/src/app/modules/static-pages/login.component.scss
+++ b/src/app/modules/static-pages/login.component.scss
@@ -10,10 +10,6 @@
   }
 }
 
-.logo {
-  margin-bottom: $bq-base-margin;
-}
-
 .center {
   width: 100%;
 
